chore(test): improved unit tests feat(scroller): added dom options

--- a/packages/scroller-core/demos/default/index.html
+++ b/packages/scroller-core/demos/default/index.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     <main>
-      <div class="scroll-target">I'm a target lol</div>
+      <div class="custom-container">
+        <div class="custom-wrapper">
+          <div class="scroll-target">I'm a target lol</div>
+        </div>
+      </div>
     </main>
 
     <script src="index.ts"></script>
