refactor(observer): updated general structure

--- a/packages/observer/demos/default/index.html
+++ b/packages/observer/demos/default/index.html
@@ -30,6 +30,16 @@
         <span>Offset: <span class="page-offset">0x0</span></span><br>
         <span>Size: <span class="size">0x0</span></span><br>
       </smoovy-demo-item>
+      <smoovy-demo-item
+        data-name="element-mutations"
+        data-headline="Element Mutations"
+        data-elements="target,trigger-node,page-offset,position,size"
+      >
+        <div class="trigger-node">I will be added/removed from the DOM</div>
+        <div class="element target">Click on play to see me in action</div>
+        <span>Offset: <span class="page-offset">0x0</span></span><br>
+        <span>Size: <span class="size">0x0</span></span><br>
+      </smoovy-demo-item>
     </smoovy-demo-collection>
 
     <!-- Scripts -->
