--- a/packages/observer/tests/browser/element.test.html
+++ b/packages/observer/tests/browser/element.test.html
@@ -11,6 +11,6 @@
   <body>
     <div id="test1"></div>
 
-    <script src="./element.test.html.js"></script>
+    <script src="./element.test.html.ts"></script>
   </body>
 </html>
