--- a/packages/observer/tests/browser/viewport.test.html
+++ b/packages/observer/tests/browser/viewport.test.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <span>Viewport test</span>
-    <script src="./viewport.test.html.js"></script>
+    <script src="./viewport.test.html.ts"></script>
   </body>
 </html>
