refactor(tween): improvements + performance

--- a/packages/tween/demos/default/index.html
+++ b/packages/tween/demos/default/index.html
@@ -41,6 +41,43 @@
           </div>
         </div>
       </smoovy-demo-item>
+      <smoovy-demo-item
+        data-name="pause-controls"
+        data-headline="Pause/Resume"
+        data-elements="box"
+      >
+        <div class="box"></div>
+      </smoovy-demo-item>
+      <smoovy-demo-item
+        data-name="delayed"
+        data-headline="With delay (1s)"
+        data-elements="box"
+      >
+        <div class="box"></div>
+      </smoovy-demo-item>
+      <smoovy-demo-item
+        data-name="progress"
+        data-headline="Track progress"
+        data-elements="box"
+      >
+        <div class="box"></div>
+      </smoovy-demo-item>
+      <smoovy-demo-item
+        data-name="progress-anchor"
+        data-headline="Tween position with dynamic anchor"
+        data-elements="box"
+      >
+        <div class="box-wrapper">
+          <div class="box"></div>
+        </div>
+      </smoovy-demo-item>
+      <smoovy-demo-item
+        data-name="seeking"
+        data-headline="Seeking"
+        data-elements="box"
+      >
+        <div class="box"></div>
+      </smoovy-demo-item>
     </smoovy-demo-collection>
 
     <!-- Scripts -->
