feat(scroller): improved behaviors

--- a/packages/scroller/demos/default/index.html
+++ b/packages/scroller/demos/default/index.html
@@ -12,7 +12,14 @@
       <section class="large">Section 2</section>
       <section class="medium">Section 3</section>
       <section class="small"><a href="#test">Section 4</a></section>
-      <section class="large">Section 5</section>
+      <section class="large">Section 6</section>
+      <section class="medium">
+        <input type="text" placeholder="Section 7" />
+        <input type="text" placeholder="Section 7" />
+        <input type="text" placeholder="Section 7" />
+      </section>
+      <section class="large">Section 8</section>
+      <section class="large">Section 9</section>
     </main>
 
     <script src="index.ts"></script>
