feat(parallax): updated calculations

--- a/packages/observer/demos/default/index.html
+++ b/packages/observer/demos/default/index.html
@@ -40,6 +40,13 @@
         <span>Offset: <span class="page-offset">0x0</span></span><br>
         <span>Size: <span class="size">0x0</span></span><br>
       </smoovy-demo-item>
+      <smoovy-demo-item
+        data-name="element-visibility"
+        data-headline="Element visibility"
+        data-elements="target1"
+      >
+        <div class="element target">I am visible!</div>
+      </smoovy-demo-item>
     </smoovy-demo-collection>
 
     <!-- Scripts -->
