--- a/packages/parallax/demos/default/index.html
+++ b/packages/parallax/demos/default/index.html
@@ -9,10 +9,10 @@
     <div class="box-wrapper">
       <div class="spacer medium"></div>
       <div class="spacer medium"></div>
-      <div class="box medium"></div>
+      <div class="box medium box1"></div>
       <div class="spacer medium"></div>
       <div class="spacer medium"></div>
-      <div class="box small"></div>
+      <div class="box small box2"></div>
       <div class="spacer medium"></div>
       <div class="spacer medium"></div>
       <div class="spacer medium"></div>
