--- a/packages/parallax/demos/default/index.html
+++ b/packages/parallax/demos/default/index.html
@@ -24,6 +24,11 @@
       <div class="spacer medium"></div>
       <div class="spacer medium"></div>
       <div class="spacer medium"></div>
+      <div class="box large box3"></div>
+      <div class="spacer medium"></div>
+      <div class="spacer medium"></div>
+      <div class="spacer medium"></div>
+      <div class="spacer medium"></div>
       <div class="spacer medium"></div>
     </div>
 
