refactor(observer): structure

--- a/packages/observer/demos/default/index.html
+++ b/packages/observer/demos/default/index.html
@@ -6,48 +6,7 @@
     <link rel="stylesheet" href="index.scss" />
   </head>
   <body>
-    <smoovy-demo-collection data-headline="Observer demos">
-      <smoovy-demo-item
-        data-name="viewport"
-        data-headline="Viewport"
-        data-elements="dimension"
-      >
-        <div class="dimension">0x0</div>
-      </smoovy-demo-item>
-      <smoovy-demo-item
-        data-name="viewportThrottle"
-        data-headline="Viewport with 500ms throttle"
-        data-elements="dimension"
-      >
-        <div class="dimension">0x0</div>
-      </smoovy-demo-item>
-      <smoovy-demo-item
-        data-name="element"
-        data-headline="Element"
-        data-elements="target,page-offset,position,size"
-      >
-        <div class="element target">Resize the browser to see me in action</div>
-        <span>Offset: <span class="page-offset">0x0</span></span><br>
-        <span>Size: <span class="size">0x0</span></span><br>
-      </smoovy-demo-item>
-      <smoovy-demo-item
-        data-name="element-mutations"
-        data-headline="Element Mutations"
-        data-elements="target,trigger-node,page-offset,position,size"
-      >
-        <div class="trigger-node">I will be added/removed from the DOM</div>
-        <div class="element target">Click on play to see me in action</div>
-        <span>Offset: <span class="page-offset">0x0</span></span><br>
-        <span>Size: <span class="size">0x0</span></span><br>
-      </smoovy-demo-item>
-      <smoovy-demo-item
-        data-name="element-visibility"
-        data-headline="Element visibility"
-        data-elements="target1"
-      >
-        <div class="element target">I am visible!</div>
-      </smoovy-demo-item>
-    </smoovy-demo-collection>
+    <div class="box box1"></div>
 
     <!-- Scripts -->
     <script src="index.ts"></script>
