feat(observer): testes and new structure

--- a/packages/observer/tests/browser/observer.test.html
+++ b/packages/observer/tests/browser/observer.test.html
@@ -9,7 +9,8 @@
     </style>
   </head>
   <body>
-    <span>Viewport test</span>
-    <script src="./viewport.test.html.ts"></script>
+    <div id="test1"></div>
+
+    <script src="./observer.test.html.ts"></script>
   </body>
 </html>
