--- a/packages/observer/demos/default/index.html
+++ b/packages/observer/demos/default/index.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <div class="box box1"></div>
+    <div class="space"></div>
+    <div class="box box2"></div>
+    <div class="space"></div>
+    <div class="box box3"></div>
 
     <!-- Scripts -->
     <script src="index.ts"></script>
