--- a/packages/scroller/demos/default/index.html
+++ b/packages/scroller/demos/default/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.scss">
   </head>
   <body>
-    <main>
+    <main style="width: 100%; height: 100%;">
       <section class="medium">Section 1</section>
       <section class="large">Section 2</section>
       <section class="medium">Section 3</section>
