fix(scroller): invalid focus visibility check

--- a/packages/scroller/demos/native/index.html
+++ b/packages/scroller/demos/native/index.html
@@ -21,6 +21,9 @@
         <input type="text" placeholder="Section 7" />
         <input type="text" placeholder="Section 7" />
       </section>
+      <section class="verylarge">
+        <a href="#" onclick="javascript:return false;" class="big-link">Big ass link</a>
+      </section>
       <section class="large">Section 8</section>
       <section class="large">Section 9</section>
     </main>
