--- a/packages/webgl/demos/default/index.html
+++ b/packages/webgl/demos/default/index.html
@@ -34,6 +34,9 @@
     Itaque, quam non sapiente qui quis repudiandae numquam delectus aliquam labore optio atque voluptatum excepturi dolores nam distinctio illum nostrum perspiciatis nobis. Quam debitis quasi provident ex. Corrupti, ea eius!
     <br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br>
+    <div id="test-attach" style="width: 400px; height: 300px; border: 1px solid green; margin-left: 500px"></div>
+    <br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br>
     Pariatur odio quis quisquam fugiat? Obcaecati quis alias, doloribus impedit vel ipsa minima excepturi laboriosam eos ad, velit labore maxime reprehenderit rem modi? Eaque, quo reprehenderit sit praesentium neque laudantium.
     <br><br><br><br><br><br><br><br><br><br>
     Culpa magni adipisci quos voluptates sapiente explicabo molestiae similique nisi aut deserunt itaque fugiat delectus, dolorem, error sequi nam esse nostrum magnam possimus repudiandae est corrupti? Provident ad numquam deleniti!</p>
