feat(parallax): added bottom calculations

--- a/packages/parallax/demos/default/index.html
+++ b/packages/parallax/demos/default/index.html
@@ -31,6 +31,19 @@
       <div class="spacer medium"></div>
       <div class="spacer medium"></div>
     </div>
+    <section>Section</section>
+    <footer>
+      <b>I'm footer</b><br/>
+      <b>I'm footer</b><br/>
+      <b>I'm footer</b><br/>
+      <b>I'm footer</b><br/>
+      <b>I'm footer</b><br/>
+      <b>I'm footer</b><br/>
+      <b>I'm footer</b><br/>
+      <b>I'm footer</b><br/>
+      <b>I'm footer</b><br/>
+      <b>I'm footer</b><br/>
+    </footer>
 
     <!-- Scripts -->
     <script src="index.ts"></script>
