--- a/packages/parallax/demos/default/index.html
+++ b/packages/parallax/demos/default/index.html
@@ -17,6 +17,11 @@
       <div class="spacer medium"></div>
       <div class="spacer medium"></div>
       <div class="spacer medium"></div>
+      <div class="box medium image-box" style="overflow: hidden">
+        <div class="image-wrapper">
+          <div class="image"></div>
+        </div>
+      </div>
       <div class="spacer medium"></div>
       <div class="spacer medium"></div>
       <div class="spacer medium"></div>
