--- a/packages/webgl/demos/default/index.html
+++ b/packages/webgl/demos/default/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <main style="position: relative; z-index: 1;">
+    <div id="box" style="width: 500px; height: 500px; position: absolute; left: 0; top: 0;"></div>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia reprehenderit accusamus itaque facilis non sit quo nemo dicta aperiam, repellat, debitis voluptates explicabo voluptatem veniam nobis temporibus deserunt numquam nulla.
     Cum deleniti aliquam nostrum quos enim blanditiis modi vitae! Debitis eligendi magni soluta voluptate velit odio alias quos? Voluptatibus voluptates fuga fugiat facere error quod. Adipisci vel numquam totam aliquid.
     Quisquam, blanditiis maxime. Architecto consequuntur culpa nesciunt quis quas sequi amet ea tenetur, impedit libero velit corporis eaque asperiores dolor officia mollitia odit laudantium, minus dolorum quos magni. Dolor, pariatur.
