--- a/packages/scroller/demos/default/index.html
+++ b/packages/scroller/demos/default/index.html
@@ -11,7 +11,7 @@
       <section class="medium">Section 1</section>
       <section class="large">Section 2</section>
       <section class="medium">Section 3</section>
-      <section id="sec4" class="small"><a href="#test">Section 4</a></section>
+      <section id="sec4" class="small"><a style="display: block" href="#test">Section 4</a></section>
       <section class="large">Section 6</section>
       <section class="medium">
         <input type="text" placeholder="Section 7" />
