feat(parallax): refactoring and bugfixes

--- a/packages/parallax/demo/index.html
+++ b/packages/parallax/demo/index.html
@@ -18,11 +18,11 @@
       <div class="spacer medium"></div>
       <div class="spacer medium"></div>
       <div class="spacer medium"></div>
-      <div class="box medium image-box" style="overflow: hidden">
+      <!-- <div class="box medium image-box" style="overflow: hidden">
         <div class="image-wrapper">
           <div class="image"></div>
         </div>
-      </div>
+      </div> -->
       <div class="spacer medium"></div>
       <div class="spacer medium"></div>
       <div class="spacer medium"></div>
@@ -42,12 +42,12 @@
       <div class="spacer medium"></div>
     </div>
     <section>Section</section>
-    <div class="footer-wrapper">
+    <!-- <div class="footer-wrapper">
       <footer style="height: 100px">
         <b>I'm footer</b>
       </footer>
-    </div>
-    <!-- <footer>
+    </div> -->
+    <footer>
       <b>I'm footer</b><br/>
       <b>I'm footer</b><br/>
       <b>I'm footer</b><br/>
@@ -58,7 +58,7 @@
       <b>I'm footer</b><br/>
       <b>I'm footer</b><br/>
       <b>I'm footer</b><br/>
-    </footer> -->
+    </footer>
 
     <!-- Scripts -->
     <script async type="module" src="index.ts"></script>
