--- a/packages/parallax/demo/sidescroller/index.html
+++ b/packages/parallax/demo/sidescroller/index.html
@@ -27,6 +27,6 @@
     </section>
 
     <!-- Scripts -->
-    <script src="index.ts"></script>
+    <script async type="module" src="index.ts"></script>
   </body>
 </html>
