feat(webgl): improved triangulation

--- a/packages/webgl/demo/index.html
+++ b/packages/webgl/demo/index.html
@@ -5,11 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WebGL Demo</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+    }
+  </style>
 </head>
 <body>
   <main style="position: relative; z-index: 1;">
     <div id="box" style="width: 500px; height: 500px; position: absolute; left: 0; top: 0;"></div>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia reprehenderit accusamus itaque facilis non sit quo nemo dicta aperiam, repellat, debitis voluptates explicabo voluptatem veniam nobis temporibus deserunt numquam nulla.
+    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia reprehenderit accusamus itaque facilis non sit quo nemo dicta aperiam, repellat, debitis voluptates explicabo voluptatem veniam nobis temporibus deserunt numquam nulla.
     Cum deleniti aliquam nostrum quos enim blanditiis modi vitae! Debitis eligendi magni soluta voluptate velit odio alias quos? Voluptatibus voluptates fuga fugiat facere error quod. Adipisci vel numquam totam aliquid.
     Quisquam, blanditiis maxime. Architecto consequuntur culpa nesciunt quis quas sequi amet ea tenetur, impedit libero velit corporis eaque asperiores dolor officia mollitia odit laudantium, minus dolorum quos magni. Dolor, pariatur.
     <br><br><br><br><br><br><br><br><br><br>
@@ -40,7 +46,7 @@
     <br><br><br><br><br><br><br><br><br><br>
     Pariatur odio quis quisquam fugiat? Obcaecati quis alias, doloribus impedit vel ipsa minima excepturi laboriosam eos ad, velit labore maxime reprehenderit rem modi? Eaque, quo reprehenderit sit praesentium neque laudantium.
     <br><br><br><br><br><br><br><br><br><br>
-    Culpa magni adipisci quos voluptates sapiente explicabo molestiae similique nisi aut deserunt itaque fugiat delectus, dolorem, error sequi nam esse nostrum magnam possimus repudiandae est corrupti? Provident ad numquam deleniti!</p>
+    Culpa magni adipisci quos voluptates sapiente explicabo molestiae similique nisi aut deserunt itaque fugiat delectus, dolorem, error sequi nam esse nostrum magnam possimus repudiandae est corrupti? Provident ad numquam deleniti!</div>
   </main>
   <script async type="module" src="./index.ts"></script>
 </body>
