feat: (webgl): added image unloadTexture option

--- a/packages/webgl/demo/index.html
+++ b/packages/webgl/demo/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
   <main style="position: relative; z-index: 1;">
+    <div id="test-attach" style="width: 400px; height: 300px; border: 1px solid green; margin-left: 500px"></div>
     <div id="box" style="width: 500px; height: 500px; position: absolute; left: 0; top: 0;"></div>
     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia reprehenderit accusamus itaque facilis non sit quo nemo dicta aperiam, repellat, debitis voluptates explicabo voluptatem veniam nobis temporibus deserunt numquam nulla.
     Cum deleniti aliquam nostrum quos enim blanditiis modi vitae! Debitis eligendi magni soluta voluptate velit odio alias quos? Voluptatibus voluptates fuga fugiat facere error quod. Adipisci vel numquam totam aliquid.
