feat(parallax): optimized shift start and end calculation

--- a/packages/parallax/demo/index.html
+++ b/packages/parallax/demo/index.html
@@ -18,11 +18,11 @@
       <div class="spacer medium"></div>
       <div class="spacer medium"></div>
       <div class="spacer medium"></div>
-      <!-- <div class="box medium image-box" style="overflow: hidden">
+      <div class="box medium image-box" style="overflow: hidden">
         <div class="image-wrapper">
           <div class="image"></div>
         </div>
-      </div> -->
+      </div>
       <div class="spacer medium"></div>
       <div class="spacer medium"></div>
       <div class="spacer medium"></div>
