--- a/packages/composer/demo/index.html
+++ b/packages/composer/demo/index.html
@@ -10,6 +10,7 @@
   <div
     data-sample-component='{ "message": 42 }'
     data-sample-component-message="12"
+    data-sample-component-array='["test", "test2"]'
     data-sample-component-is-active
   >
     <div class="select-me">Select Me</div>
