feat(grid): added recalc + breakpoints

--- a/packages/grid/demo/index.html
+++ b/packages/grid/demo/index.html
@@ -12,7 +12,7 @@
       main, body { overflow: hidden; }
       main > div {
         /* border: 1px solid #000; */
-        background: lightgray;
+        background: transparent;
       }
     </style>
   </head>
