feat(router): added hash navigation

--- a/packages/router/demo/index.html
+++ b/packages/router/demo/index.html
@@ -9,6 +9,7 @@
     <nav>
       <a href="/">Start</a>
       <a href="/sample.html">Sample</a>
+      <a href="#customid">Hash link</a>
     </nav>
     <main>
       <h1>Start</h1>
