--- a/packages/router/demo/sample.html
+++ b/packages/router/demo/sample.html
@@ -9,10 +9,11 @@
     <nav>
       <a href="/">Start</a>
       <a href="/sample.html">Sample</a>
+      <a href="#customid">Hash link</a>
     </nav>
     <main>
       <h1>Sample page</h1>
     </main>
-    <script src="index.ts"></script>
+    <script async type="module" src="index.ts"></script>
   </body>
 </html>
