fix(tween): invalid timeline duration

--- a/packages/tween/demo/index.html
+++ b/packages/tween/demo/index.html
@@ -28,6 +28,7 @@
   </style>
 </head>
 <body>
+  <div class="vectors"></div>
   <div class="boxes">
     <div class="anim anim1"></div>
     <div class="anim anim2"></div>
