feat(router): refactor, improve animations feat(tween): added callbacks to timeline

--- a/packages/router/demo/projects.html
+++ b/packages/router/demo/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Sample | @smoovy/router | demos.default</title>
+    <title>Projects | @smoovy/router | demos.default</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -14,7 +14,8 @@
     </nav>
     <main>
       <div class="router-view">
-        <h1>Sample page</h1>
+        <h1>Out projects</h1>
+        <a href="/">Back to home</a>
       </div>
     </main>
     <script async type="module" src="index.ts"></script>
