--- a/packages/router/demo/index.html
+++ b/packages/router/demo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Start | @smoovy/router | demos.default</title>
+    <title>Start | @smoovy/router | demos.default</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -9,10 +9,13 @@
     <nav>
       <a href="/">Start</a>
       <a href="/sample.html">Sample</a>
+      <a href="/projects.html">Projects</a>
       <a href="#customid">Hash link</a>
     </nav>
     <main>
-      <h1>Start</h1>
+      <div class="router-view">
+        <h1>Start</h1>
+      </div>
     </main>
     <script async type="module" src="index.ts"></script>
   </body>
