--- a/packages/tween/demo/index.html
+++ b/packages/tween/demo/index.html
@@ -30,7 +30,7 @@
 <body>
   <div class="vectors"></div>
   <div class="boxes">
-    <div class="anim anim1"></div>
+    <div class="anim anim1" style="transform: scaleX(0.3);"></div>
     <div class="anim anim2"></div>
     <div class="anim anim3"></div>
     <div class="anim anim4"></div>
