--- a/packages/router/demo/index.html
+++ b/packages/router/demo/index.html
@@ -9,7 +9,7 @@
     <nav>
       <a href="/">Start</a>
       <a href="/sample.html">Sample</a>
-      <a href="/projects.html">Projects</a>
+      <a href="/projects/">Projects</a>
       <a href="#customid">Hash link</a>
     </nav>
     <main>
