--- a/packages/router/demo/projects/index.html
+++ b/packages/router/demo/projects/index.html
@@ -9,12 +9,12 @@
     <nav>
       <a href="/">Start</a>
       <a href="/sample.html">Sample</a>
-      <a href="/projects.html">Projects</a>
+      <a href="/projects/">Projects</a>
       <a href="#customid">Hash link</a>
     </nav>
     <main>
       <div class="router-view">
-        <h1>Out projects</h1>
+        <h1>Our projects</h1>
         <a href="/">Back to home</a>
       </div>
     </main>
