--- a/packages/router/demo/projects/index.html
+++ b/packages/router/demo/projects/index.html
@@ -18,6 +18,6 @@
         <a href="/">Back to home</a>
       </div>
     </main>
-    <script async type="module" src="index.ts"></script>
+    <script async type="module" src="../index.ts"></script>
   </body>
 </html>
