--- a/packages/parallax/demo/index.html
+++ b/packages/parallax/demo/index.html
@@ -25,6 +25,9 @@
       </div>
       <div class="spacer medium"></div>
       <div class="spacer medium"></div>
+      <div style="position: relative; height: 120vh; background: lightgray; padding: 50px">
+        <div class="box large clamp-box" style="margin-bottom: 50px"></div>
+      </div>
       <div class="spacer medium"></div>
       <div class="box small box2-2" style="margin-left: 30px"></div>
       <div class="spacer medium"></div>
