fix(router): doc clone

--- a/packages/router/demo/index.html
+++ b/packages/router/demo/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="is-theme-dark">
   <head>
     <title>Start | @smoovy/router | demos.default</title>
     <meta charset="UTF-8">
