fix(tween): initial reset

--- a/packages/tween/demo/index.html
+++ b/packages/tween/demo/index.html
@@ -25,6 +25,10 @@
     .anim:not(:last-child) {
       margin-right: 1.666vw;
     }
+
+    .anim1 {
+      transform: scaleY(.5);
+    }
   </style>
 </head>
 <body>
