feat(router): improved hash handling

--- a/packages/router/demo/index.html
+++ b/packages/router/demo/index.html
@@ -10,7 +10,7 @@
       <a href="/">Start</a>
       <a href="/sample.html">Sample</a>
       <a href="/projects/">Projects</a>
-      <a href="#customid">Hash link</a>
+      <a href="/projects/index.html#customid">Hash link</a>
     </nav>
     <main>
       <div class="router-view">
