feat: improved 3d handling

--- a/packages/webgl/demo/index.html
+++ b/packages/webgl/demo/index.html
@@ -16,13 +16,13 @@
   </style>
 </head>
 <body>
-  <!--<div style="width: 500px;height: 500px;background:red;"></div>
+  <div style="width: 500px;height: 500px;background:red;"></div>
   <div style="width: 500px;height: 500px;background:green;"></div>
   <div style="width: 500px;height: 500px;background:brown;"></div>
   <div style="width: 500px;height: 500px;background:gray;"></div>
   <div style="width: 500px;height: 500px;background:purple;"></div>
   <div style="width: 500px;height: 500px;background:salmon;"></div>
-<div style="width: 500px;height: 500px;background:blue;"></div>-->
+  <div style="width: 500px;height: 500px;background:blue;"></div>
   <script async type="module" src="./index.ts"></script>
 </body>
 </html>
